<resources>
    <string name="app_name">短点</string>
    <string name="icon_selected">精选</string>
    <string name="icon_find">发现</string>
    <string name="icon_my">我的</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="my_favorite">收藏</string>
    <string name="my_download">下载</string>
    <string name="my_history">足迹</string>
    <string name="my_info">我的资料</string>
    <string name="my_user_setting">账户设置</string>
    <string name="my_common_setting">通用设置</string>
    <string name="my_about_ddr">关于短点</string>
    <string name="launch_content">短点之内\u0020\u0020\u0020\u0020\u0020\u0020\u0020世界之外</string>
    <string name="launch_copyright">Design by ACGdoge</string>
</resources>
