<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_page_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_photo_margin_top"
        android:gravity="center"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/my_photo"
            android:layout_width="@dimen/my_photo_width"
            android:layout_height="@dimen/my_photo_height" />

        <TextView
            android:id="@+id/my_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_username_margin_top"
            android:textColor="@color/color_my_username_text"
            android:textSize="@dimen/my_username_text_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/my_username_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/my_tab_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/favorite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_favorite"
                android:textColor="@color/color_my_tab_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/download" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_download"
                android:textColor="@color/color_my_tab_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/my_tab_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/history" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_history"
                android:textColor="@color/color_my_tab_text" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_margin_part"
        android:layout_marginTop="@dimen/my_margin_tab_with_options"
        android:background="@color/my_margin_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_options_height">

            <ImageView
                android:id="@+id/my_options_icon_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/my_options_icon_margin_left"
                android:background="@mipmap/my_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/my_options_icon_with_text"
                android:layout_toRightOf="@id/my_options_icon_1"
                android:text="@string/my_info"
                android:textColor="@color/colror_my_options"
                android:textSize="@dimen/my_options_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/more" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_margin_options"
            android:background="@color/my_margin_background" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_options_height">

            <ImageView
                android:id="@+id/my_options_icon_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/my_options_icon_margin_left"
                android:background="@mipmap/user_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/my_options_icon_with_text"
                android:layout_toRightOf="@id/my_options_icon_2"
                android:text="@string/my_user_setting"
                android:textColor="@color/colror_my_options"
                android:textSize="@dimen/my_options_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/more" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_margin_part"
        android:background="@color/my_margin_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_options_height">

            <ImageView
                android:id="@+id/my_options_icon_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/my_options_icon_margin_left"
                android:background="@mipmap/common_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/my_options_icon_margin_left"
                android:layout_toRightOf="@id/my_options_icon_3"
                android:text="@string/my_common_setting"
                android:textColor="@color/colror_my_options"
                android:textSize="@dimen/my_options_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/more" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_margin_options"
            android:background="@color/my_margin_background" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_options_height">

            <ImageView
                android:id="@+id/my_options_icon_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/my_options_icon_margin_left"
                android:background="@mipmap/about_ddr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/my_options_icon_with_text"
                android:layout_toRightOf="@id/my_options_icon_4"
                android:text="@string/my_about_ddr"
                android:textColor="@color/colror_my_options"
                android:textSize="@dimen/my_options_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/more" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_margin_options"
        android:background="@color/my_margin_background" />
</LinearLayout>